fix(link): multiple active states on safari

--- a/packages/components/src/link/src/components/osds-link/osds-link.scss
+++ b/packages/components/src/link/src/components/osds-link/osds-link.scss
@@ -44,7 +44,7 @@
 
 :not([disabled]) {
   :host(&:hover),
-  :host(&:focus) {
+  :host(&:focus-within) {
     @include osds-link-on-text-content {
       transition: background-size .2s ease-out;
       background-size: 100% var(--ods-size-02);
